# watchOnceAPI

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  yoyo.ini
migrations/: 0001-migration-createtables.py
watchonceapi/: config.py  db_config.py  main.py  models.py  schema.py  storage.py  storage_config.py
watchonceapi/dependencies/: container.py  db.py  minio.py
watchonceapi/migrations/: migration_v1.py
watchonceapi/routers/: add_secret.py  add_secret_router.py  api_secret.py  get_secret.py  get_secret_router.py
watchonceapi/services/: add_secret.py  add_secret_service.py  get_secret.py  get_secret_service.py  remove_secret.py  remove_secret_service.py
watchonceapi/utils/: connection_pool.py  utils.py
