[tool.poetry]
name = "watchonceapi"
version = "0.1.0"
description = ""
authors = ["jotty <bard143games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pypika = "^0.48.9"
pydantic = "^2.0.2"
python-multipart = "^0.0.6"
minio = "^7.1.15"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
